Start turning this into a real mod

--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,4 @@
 name = morecurves
-description = 3D models for my Minetest Ladybug Game
-depends = default
+description = Adds 10 new curve shapes to the game
+optional_depends = default,stairs,farming,wool,basic_materials,place_rotated
+min_minetest_version = 5.0.0
