You've never seen jank quite like this

--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,4 @@
 name = morecurves
 description = Adds 10 new curve shapes to the game
-optional_depends = default,stairs,farming,wool,basic_materials,place_rotated
+optional_depends = default,stairs,farming,wool,basic_materials,place_rotated,moreblocks
 min_minetest_version = 5.0.0
